tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__random__test__emit_random_codegen@pre-mem2reg@llvm14_5.snap
---
source: tket2-hseries/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.main.1({} %0) {
alloca_block:
  %"2_0" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, {}* %"2_0", align 1
  %"2_01" = load {}, {}* %"2_0", align 1
  ret void
}
